# ComputerGraphics-Project2

./: README.md
Project2/: .gitignore  CMakeLists.txt  README.md
Project2/assets/envmaps/: README.md  debug_gradient.hdr  typewriter_studio_soft.hdr
Project2/assets/models/: README.md
Project2/assets/textures/: README.md  normal_debug.ppm  roughness_debug.ppm
Project2/configs/: README.md
Project2/docs/motivational/: README.md
Project2/docs/presentation/: README.md  ppt_prompts.md  script.md
Project2/docs/report/: README.md
Project2/output/: _compare_oldmap.ppm  _compare_oldmap_denoised.ppm  area_light_shapes_demo.ppm  area_light_shapes_visible_demo.ppm  beat_kueng_homage.ppm  beat_kueng_homage_denoised.ppm  env_debug.ppm  final_yuantian_homage.ppm  final_yuantian_homage_denoised.ppm  light_types_demo.ppm  material_debug.ppm  test_noshadow.ppm  test_shadow.ppm  textured.ppm  the_blender_scene.ppm  the_blender_scene_denoised.ppm  the_blender_scene_grouped.ppm  the_blender_scene_grouped_denoised.ppm  the_blender_scene_split.ppm  the_blender_scene_split_clock.ppm  the_blender_scene_split_clock_denoised.ppm  the_blender_scene_split_denoised.ppm  the_blender_scene_split_essential_rebalanced.ppm  the_blender_scene_split_essential_rebalanced_denoised.ppm  the_blender_scene_split_rebalanced.ppm  the_blender_scene_split_rebalanced_denoised.ppm  the_blender_scene_table_close.ppm  the_blender_scene_table_close_denoised.ppm  the_blender_scene_table_close_essential.ppm  the_blender_scene_table_close_essential_denoised.ppm  the_blender_scene_table_close_grouped.ppm  the_blender_scene_table_close_grouped_denoised.ppm  the_blender_scene_table_close_oldmap_denoised.ppm  the_blender_scene_table_close_split_essential.ppm  the_blender_scene_table_close_split_essential_denoised.ppm  the_blender_scene_typewriter.ppm  the_blender_scene_typewriter_denoised.ppm  transform_debug.ppm  typewriter_material_test.ppm  typewriter_table_showcase.ppm  (+5 more)
Project2/scripts/: README.md  generate_typewriter_studio_env.py  render_two_views.sh
Project2/src/: README.md  main.cpp
Project2/src/camera/: Camera.cpp  Camera.hpp  README.md
Project2/src/core/: README.md  Ray.hpp  Vector.hpp  global.hpp
Project2/src/geometry/: BVH.cpp  BVH.hpp  Intersection.hpp  (+4 more)
Project2/tools/: generate_split_essential_scene.py  group_blender_scene_split.py  split_blender_scene_obj.py
(+134 files in other folders)
